# future-claim-certifier

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  workflow.yml
docs/: agent-usage.md  architecture.md  index.md  openapi.yaml  protocol-mapping.md  release-checklist.md
examples/safe_temperature/: bundle.json  operational_status_context.json  operational_use.json  proposed_use.json  spec.json  status_context.json
src/dfcc/: __init__.py  admission.py  api.py  artifacts.py  authority.py  backend.py  bundle.py  canonical.py  certificate.py  claims.py  cli.py  conformance.py  frame.py  guards.py  jsonpointer.py  kernel.py  lifecycle.py  models.py  policy.py  profiles.py  records.py  replay.py  runtime.py  schema.py  serialization.py  sets.py  time.py  types.py  validation.py
src/dfcc/golden/: __init__.py  cases.json
src/dfcc/schemas/: __init__.py  accepted-clause.schema.json  admission-contract.schema.json  agreement.schema.json  artifact-bundle.schema.json  artifact-ref.schema.json  completion-admission.schema.json  dependency-graph.schema.json  evidence-artifact.schema.json  failure-record.schema.json  fiber-assoc-view.schema.json  guard-record.schema.json  interval-record.schema.json  issue-certificate.schema.json  kernel-proof-artifact.schema.json  kernel-proof.schema.json  lifecycle-decision.schema.json  lifecycle-event.schema.json  manifest-record.schema.json  measurement-relation-artifact.schema.json  measurement-relation.schema.json  obligation-ref.schema.json  observation-cut.schema.json  pipeline-report.schema.json  prefix-view.schema.json  profile-resolution.schema.json  proof-ref.schema.json  proposed-use.schema.json  protocol-record-artifact.schema.json  reason-ref.schema.json  reference-ledger-entry.schema.json  replay-stage-trace.schema.json  replay-trace.schema.json  representation-relation-artifact.schema.json  representation-relation.schema.json  resolved-authority-runtime.schema.json  scalar-record.schema.json  set-ref.schema.json  status-authority-view.schema.json  status-context.schema.json  (+3 more)
tests/: test_api_backend_claims.py  test_canonical.py  test_conformance.py  test_kernel_authority.py  test_protocol_completion.py  test_protocol_layers.py  test_release_readiness.py  test_time.py
